# NN-bp

./: .gitignore  COPYRIGHT  COPYRIGHT.jp  Makefile.in  README.jp  bpe1.c  bpe2.c  bpl.c  bpl_all.c  config.h.in  configure  configure.in  neuro.c  param_config.c  read_lines.c  xor.prm
include/: allocate.h  net_str.h  netdata.h  network.h  neuro.h  param_config.h  random.h  read_lines.h  weight.h
man/man3/: BPNet.3  Dmalloc.3  NetCreate.3  NetDataInit.3  NetDataInit2.3  NetDataInit3.3  NetDataInitRecog.3  NetDataSuper2.3  NetDuplicate.3  NetExtOutval.3  NetFree.3  NetLearn.3  NetLearnAll.3  NetLearnUndo.3  NetOutput.3  NetPassLoad.3  NetPassSave.3  NetSqError.3  NetVariance.3  NetWeightInit.3  NetWeightLoad.3  NetWeightSave.3  Pepmalloc.3  Peppmalloc.3  Peprealloc.3  drealloc.3  dsigmoid.3  hinagata.3  intmalloc.3  sigmoid.3
