dnl Process this file with autoconf to produce a configure script.
AC_INIT(configure.in)
AC_CONFIG_HEADER(config.h)
CPPFLAGS="-I./include"

dnl Checks for programs.
AC_PATH_PROG(MAKE, gmake, make)

dnl Checks for libraries.
AC_CHECK_LIB(m,main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h malloc.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_BIGENDIAN
AC_CHECK_SIZEOF(long)

dnl Checks for library functions.
AC_TYPE_SIGNAL

AC_OUTPUT(Makefile)
